--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
 </section>
 
 <footer class="px-6 py-6 text-center text-gray-400 border-t border-gray-700">
-  © 2025 SMOKD (Nexify Labs LLC). All rights reserved. <a style="color: #845EF5; text-decoration: underline;" target="_blank" href="https://legal.getsmokd.app/privacy.html">Privacy</a> | <a style="color: #845EF5; text-decoration: underline;" target="_blank" href="https://legal.getsmokd.app/terms.html">Terms</a>
+  © 2025 SMOKD (Nexify Labs LLC). All rights reserved. <a style="color: #845EF5; text-decoration: underline;" target="_blank" href="https://getsmokd.app/privacy.html">Privacy</a> | <a style="color: #845EF5; text-decoration: underline;" target="_blank" href="https://getsmokd.app/terms.html">Terms</a>
 </footer>
 
   <script>
