--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>SMOKD — Quit Smoking For Real</title>
   <meta name="description" content="SMOKD helps you quit smoking for good with Rescue Mode, progress tracking, and an AI coach. Simple. Powerful. Real."/>
+  <link rel="icon" type="image/png" href="img//smokd-fav.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;600;700;800&display=swap" rel="stylesheet">
