--- a/support.html
+++ b/support.html
@@ -28,8 +28,15 @@
 </head>
 <body class="flex flex-col min-h-screen">
 
+<!-- Logo at Top -->
+<div class="flex justify-center mb-2 mt-8">
+  <a href="/">
+    <img src="/img/SMOKD-logo.png" alt="SMOKD Logo" class="h-8 w-auto">
+  </a>
+</div>
+
 <!-- Main Content -->
-<main class="flex-grow px-6 py-20">
+<main class="flex-grow px-6 py-14">
   <div class="max-w-3xl mx-auto text-center">
     <h1 class="text-4xl font-bold mb-4 gradient-text">Need Support?</h1>
     <p class="text-lg text-gray-300 mb-8">
