--- a/index.html
+++ b/index.html
@@ -52,14 +52,15 @@
 <body class="text-gray-100 selection:bg-white/10">
   <!-- NAV -->
   <header class="backdrop/40 sticky top-0 z-40">
-    <div class="mx-auto max-w-7xl px-5">
+    <div class="mx-auto max-w-7xl px-2">
       <div class="flex items-center justify-between py-4">
         <a href="#" class="flex">
-          <span class="font-extrabold tracking-tight text-lg">SMOKD</span>
+          <img src="/img/SMOKD-logo.png" alt="SMOKD Logo" class="h-8 w-auto">
         </a>
         <div class="hidden sm:flex items-center gap-4 text-sm">
           <a href="#features" class="hover:opacity-80">Features</a>
           <a href="#faq" class="hover:opacity-80">FAQ</a>
+          <a href="/support.html" class="hover:opacity-80">Support</a>
           <a href="#cta" class="ml-2 rounded-xl px-4 py-2 badge text-sm font-semibold shadow-glow hover:opacity-95">Get the App</a>
         </div>
       </div>
